--- a/frontpage.html
+++ b/frontpage.html
@@ -1,4 +1,16 @@
+<script>
+$(document).ready(function(){
+    $('[data-toggle="popover"]').popover(); 
+});
+</script>
 <div class="container">
 <h2> Welcome to my moodle </h2> 
 </div> 
 
+
+div class="jumbotron text-center">
+  <h1>Welcome to my Moodle</h1>
+  <p>A responsive Moodle front page insert</p> 
+   <br /><a href="#" data-toggle="popover" title="Contact" 
+      data-content="email: us@muddle.com">Contact us</a>
+</div>
